2018-07-05  Lionel Henry  <lionel@rstudio.com>

        * inst/include/Rcpp/api/meat/Rcpp_eval.h: Rename `RCPP_PROTECTED_EVAL`
        to `RCPP_USE_UNWIND_PROTECT` because the new API is now more general
        than just evaluation of R code.
        * inst/NEWS.Rd: idem
        * inst/unitTests/runit.interface.R: idem

2018-07-05  Lionel Henry  <lionel@rstudio.com>

        * R/unit.tests.R (unitTestSetup): Pass extra arguments to sourceCpp()
        for easier debugging.

2018-07-05  Lionel Henry  <lionel@rstudio.com>

        * R/Attributes.R (.plugins[["unwindProtect"]]): You can now add
        `[[Rcpp::plugins(unwindProtect)]]` in one of your source file to enable
        the new unwind-protect mechanism easily. It appends
        `-DRCPP_USE_UNWIND_PROTECT` to `PKG_CPPFLAGS`.

        This is safer than using a `#define` because it ensures unwind-protect
        is enabled in all compilation units, including RcppExports.cpp.

        * inst/unitTests/cpp/stack.cpp: Use new plugin to enable unwind-protect.

2018-06-22  Kevin Ushey  <kevinushey@gmail.com>

        * inst/include/Rcpp/api/meat/Rcpp_eval.h: Ensure R_BaseEnv is used

2018-06-21  Lionel Henry  <lionel@rstudio.com>

        * inst/include/Rcpp/api/meat/unwind.h: Extract unwind protection from
        Rcpp::Rcpp_fast_eval() into Rcpp::unwindProtect(). Use this function
        whenever you need to call a C function that might longjump, for instance
        a function from R's C API. Rcpp::unwindProtect() will protect your C++
        stack and throw a Rcpp::internal::LongJump exception to ensure all
        destructors are called. The R longjump is then resumed once it is safe
        to do so. This function powers Rcpp_fast_eval().

        You can use Rcpp::unwindProtect() in two ways. First with a C-like
        callback interface that takes a `SEXP (*)(void* data)` function pointer
        and a `void*` data argument that is passed to the function. Second, if